# goit-algo2-hw-06

./: pyproject.toml  task1.py  task2.py
