[project]
name = "goit-algo2-hw-06"
version = "0.1.0"
description = ""
authors = [
    {name = "sanyanut",email = "alexander.sorochinskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mmh3 (>=5.2.1,<6.0.0)",
    "datasketch (>=1.10.0,<2.0.0)",
    "hyperloglog (>=0.1.5,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
